--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "SpaceCode\\Maia\\MaiaServiceProvider",
-                "SpaceCode\\Maia\\ToolServiceProvider"
+                "SpaceCode\\Maia\\MaiaServiceProvider"
             ]
         }
     },
