--- a/composer.json
+++ b/composer.json
@@ -20,29 +20,17 @@
         }
     ],
     "require": {
-        "php" : "^7.2",
-        "illuminate/auth": "^5.8|^6.0",
-        "illuminate/container": "^5.8|^6.0",
-        "illuminate/contracts": "^5.8|^6.0",
-        "illuminate/database": "^5.8|^6.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0",
-        "phpunit/phpunit": "^8.0",
-        "predis/predis": "^1.1"
+        "php": "^7.2",
+        "spatie/laravel-permission": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "SpaceCode\\Maia\\": "src"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
+            "SpaceCode\\Maia\\": "src/"
+        }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "SpaceCode\\Maia\\MaiaServiceProvider",
                 "SpaceCode\\Maia\\ToolServiceProvider"
             ]
         }
