--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "spatie/laravel-permission": "^3.0"
+        "php": "^7.2"
     },
     "autoload": {
         "psr-4": {
