--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,13 @@
     ],
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/nova": "~2.0",
         "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*",
         "illuminate/http": "5.6.*|5.7.*|5.8.*|6.*",
         "illuminate/auth": "^5.8|^6.0",
         "illuminate/container": "^5.8|^6.0",
         "illuminate/contracts": "^5.8|^6.0",
-        "illuminate/database": "^5.8|^6.0"
+        "illuminate/database": "^5.8|^6.0",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "orchestra/testbench": "^3.8|^4.0",
