--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.7",
-        "laravel/nova": ">=2.9.0",
-        "fideloper/proxy": "^4.0",
+        "laravel/nova": "*",
         "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*",
         "illuminate/http": "5.6.*|5.7.*|5.8.*|6.*",
         "illuminate/auth": "^5.8|^6.0",
