--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "ext-pdo": "*",
+        "ext-zlib": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "intervention/image": "^2.5",
