--- a/composer.json
+++ b/composer.json
@@ -26,28 +26,21 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "ext-json": "*",
-        "ext-pdo": "*",
-        "ext-zlib": "*",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.7",
+        "laravel/tinker": "^1.0",
         "laravel/nova": "*",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*",
-        "illuminate/http": "5.6.*|5.7.*|5.8.*|6.*",
-        "illuminate/auth": "^5.8|^6.0",
-        "illuminate/container": "^5.8|^6.0",
-        "illuminate/contracts": "^5.8|^6.0",
-        "illuminate/database": "^5.8|^6.0",
+        "intervention/image": "^2.5",
         "laravel/slack-notification-channel": "^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0",
-        "phpunit/phpunit": "^8.0",
-        "predis/predis": "^1.1",
-        "barryvdh/laravel-debugbar": "^3.2"
+        "beyondcode/laravel-dump-server": "^1.0",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
