--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,17 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "ext-phpiredis": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.7",
         "laravel/tinker": "^1.0",
         "laravel/nova": "2.9.4",
         "intervention/image": "^2.5",
-        "laravel/slack-notification-channel": "^2.0"
+        "laravel/slack-notification-channel": "^2.0",
+        "laminas/laminas-httphandlerrunner ": "^1.1",
+        "intervention/imagecache": "~2.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
