--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.7",
         "laravel/tinker": "^1.0",
-        "laravel/nova": "2.9.4",
+        "laravel/nova": "*",
         "intervention/image": "^2.5",
         "laravel/slack-notification-channel": "^2.0",
         "laminas/laminas-httphandlerrunner": "^1.1",
