--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/js/horizon.js.LICENSE.txt
 dist/js/license.js.LICENSE.txt
 dist/js/seo.js.LICENSE.txt
 dist/js/settings.js.LICENSE.txt
+dist/js/multiselect.js.LICENSE.txt
 dist/index/vendor.js.LICENSE.txt
 resources/js
 resources/sass
