--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dist/js/seo.js.LICENSE.txt
 dist/js/settings.js.LICENSE.txt
 dist/js/multiselect.js.LICENSE.txt
 dist/index/vendor.js.LICENSE.txt
+database/migrations/2020_01_01_000000_create_comments_table.php
 resources/js
 resources/sass
 webpack.mix.js
