Editor config, js, css UploadController.php Editor Field Editor Handlers Editor Models PruneStaleAttachments.php

--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
         "intervention/image": "^2.5",
         "laravel/slack-notification-channel": "^2.0",
         "laminas/laminas-httphandlerrunner": "^1.1",
-        "intervention/imagecache": "~2.3",
-        "waynestate/nova-ckeditor4-field": "^0.7.0"
+        "intervention/imagecache": "~2.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
