--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist/js/filemanager-tool.js.LICENSE.txt
 dist/js/horizon.js.LICENSE.txt
 dist/js/license.js.LICENSE.txt
 dist/js/seo.js.LICENSE.txt
+dist/js/editor.js.LICENSE.txt
 dist/js/settings.js.LICENSE.txt
 dist/js/multiselect.js.LICENSE.txt
 dist/index/vendor.js.LICENSE.txt
