Changed Slug field Removed sluggable.js Changed lang E-commerce developing started

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist/js/license.js.LICENSE.txt
 dist/js/seo.js.LICENSE.txt
 dist/js/editor.js.LICENSE.txt
 dist/js/settings.js.LICENSE.txt
+dist/js/slug.js.LICENSE.txt
 dist/index/comments.js.LICENSE.txt
 dist/js/multiselect.js.LICENSE.txt
 dist/index/vendor.js.LICENSE.txt
