* shopIndex, productIndex, productCategoryIndex, parentProductCategoryIndex, productTagIndex added * increments to bigIncrements in some tables * integer to bigInteger in some tables * products, product_categories, product_tags table added * E-commerce permissions added * shops_prefix Setting added * Money field added * Time field added * lang changed * templates for E-commerce added * sitemap routes for E-commerce added * ActionController.php * E-commerce functions in IndexController.php * Model::class changed * Resource:class changed * E-commerce policy added * E-commerce resources added * jsonProp function in helper.php changed * composer dependency "moneyphp/money" added

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ dist/js/seo.js.LICENSE.txt
 dist/js/editor.js.LICENSE.txt
 dist/js/settings.js.LICENSE.txt
 dist/js/slug.js.LICENSE.txt
+dist/js/dependon.js.LICENSE.txt
+dist/js/money.js.LICENSE.txt
+dist/js/time.js.LICENSE.txt
 dist/index/comments.js.LICENSE.txt
 dist/js/multiselect.js.LICENSE.txt
 dist/index/vendor.js.LICENSE.txt
