--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "ext-zlib": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.7",
