--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
 dist/mix-manifest.json
-dist/js/advanced-image.js.LICENSE.txt
-dist/js/filemanager-field.js.LICENSE.txt
-dist/js/filemanager-tool.js.LICENSE.txt
-dist/js/horizon.js.LICENSE.txt
-dist/js/license.js.LICENSE.txt
-dist/js/seo.js.LICENSE.txt
-dist/js/editor.js.LICENSE.txt
-dist/js/settings.js.LICENSE.txt
-dist/js/slug.js.LICENSE.txt
-dist/js/dependon.js.LICENSE.txt
-dist/js/money.js.LICENSE.txt
-dist/js/time.js.LICENSE.txt
-dist/index/comments.js.LICENSE.txt
-dist/js/multiselect.js.LICENSE.txt
-dist/index/vendor.js.LICENSE.txt
+dist/js/*.txt
+dist/index/*.txt
 database/migrations/2020_01_01_000000_create_comments_table.php
 resources/js
 resources/sass
-webpack.mix.js
-package.json
-todo.txt
